# dawproject

./: Cargo.toml  LICENSE.md  MetaData.xsd  Project.xsd  README.md  notes.md
resources/tests/: project.xml
src/: application.rs  arrangement.rs  bool_parameter.rs  channel.rs  content_type.rs  daw_project.rs  double_adapter.rs  enum_parameter.rs  expression_type.rs  file_reference.rs  id_ref.rs  identifiable.rs  integer_parameter.rs  interpolation.rs  lane.rs  lib.rs  main_structure.rs  meta_data.rs  mixer_role.rs  parameter.rs  parser.rs  project.rs  reader.rs  real_parameter.rs  referencable.rs  scene.rs  send.rs  send_type.rs  time_signature_parameter.rs  track.rs  transport.rs  unit.rs  utility.rs  xml_elements.rs
src/device/: au_plugin.rs  builtin_device.rs  clap_plugin.rs  compressor.rs  device.rs  device_role.rs  eq_band.rs  eq_band_type.rs  equalizer.rs  limiter.rs  mod.rs  noise_gate.rs  plugin.rs  vst2_plugin.rs  vst3_plugin.rs
src/timeline/: audio.rs  automation_target.rs  bool_point.rs  clip.rs  clip_slot.rs  clips.rs  enum_point.rs  integer_point.rs  lanes.rs  marker.rs  markers.rs  media_file.rs  mod.rs  note.rs  notes.rs  point.rs  points.rs  real_point.rs  time_signature_point.rs  time_unit.rs  timeline.rs  video.rs  warp.rs  warps.rs
